src/test/ui/regions/region-object-lifetime-5.stderr
error[E0597]: `*x` does not live long enough
  --> $DIR/region-object-lifetime-5.rs:11:5
   |
LL |     x.borrowed()
   |     ^ borrowed value does not live long enough
LL | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
